yukon-client/yukon-web/src/com/cannontech/web/common/resources/overrides.less
/* VARIABLES */
@primary-color: #06c;
@font-color: #555;
@visited-color: #04a;

@red: #d14836;
@green: #093;
@light-green: #5cb85c;
@blue: #1f4cff;
@light-blue: #849ddf;
@orange: #fb8521;

@primary-button-color: #777;
@primary-button-color-border: #666;
@primary-button-color-hover: #888;

@form-control-height: 26px;



/* Functional Overrides */
.box { 
    overflow: hidden;
    display: block;
    position: relative;
    zoom: 1;
}
.pull-down-4 { margin-bottom: -4px !important; }
.pull-down-3 { margin-bottom: -3px !important; }
.push-down-4 { margin-top: 4px !important; }
.push-down-3 { margin-top: 3px !important; }

.bcs { border-collapse: separate; }
.B0 { bottom: 0; }
.bn { border: none; border-style: none; }
.cl { clear: left; }
.clear { clear: both; }
.cp { cursor: pointer; }
.cr { clear: right; }
.db { display: block; }
.di { display: inline; }
.dib { display: inline-block; }
.dn { display: none; }
.fl { float: left !important; }
.fn { float: none !important; }
.fr { float: right !important; }
.fwb { font-weight: bold; }
.fwn { font-weight: normal; }
.L0 { left: 0; }
.lhn { line-height: normal; }
.M0 { margin: 0 !important; }
.ma { margin: auto; }
.o0 { opacity: 0; }
.oa { overflow: auto; }
.oh { overflow: hidden; }
.ov { overflow: visible; }
.P0 { padding: 0; }
.pa { position: absolute; }
.pf { position: fixed; }
.pr { position: relative; }
.R0 { right: 0; }
.scroll_x { overflow-x: auto; }
.scroll_y { overflow-y: auto; }
.T0 { top: 0px; }
.tac { text-align: center; }
.tal { text-align: left; }
.tar { text-align: right; }
.tdn { text-decoration: none; }
.usn { 
    -webkit-touch-callout: none;
    -webkit-user-select: none;
     -khtml-user-select: none;
       -moz-user-select: none;
        -ms-user-select: none;
            user-select: none;
 }
.vab { vertical-align: bottom; }
.vam { vertical-align: middle; }
.vat { vertical-align: top !important; }
.vatt { vertical-align: text-top; }
.vatb { vertical-align: text-bottom; }
.vh { visibility: hidden; }
.vv { visibility: visible; }
.wbba { word-break: break-all; }
.wrbw { word-wrap: break-word; }
.wrn { word-wrap: normal; }
.wsn { white-space: normal; }
.wsnw { white-space: nowrap; }
.wsp { white-space: pre; }
.z1 { zoom: 1; }
.zN { zoom: normal; }

.content-box, .content-box * {
    -webkit-box-sizing: content-box;
       -moz-box-sizing: content-box;
            box-sizing: content-box;
}

.no-transitions, .no-transitions * {
    -webkit-transition-property: none !important;
       -moz-transition-property: none !important;
            transition-property: none !important;
}



/* Tipsy Overrides */
.tipsy-inner {
    background-color: #fff; 
    color: #000; 
    max-width: 600px; 
    padding: 5px 8px 4px 8px; 
    text-align: left;
}
.tipsy-inner {
    -webkit-box-shadow: 0 0 5px #000; 
       -moz-box-shadow: 0 0 5px #000;
            box-shadow: 0 0 5px #000; 
}
.tipsy-inner { border-radius: 2px; }
.tipsy { font-size: 14px; }
.tipsy-arrow-n { border-bottom-color: #665; }
.tipsy-arrow-s { border-top-color: #665; }
.tipsy-arrow-e { border-left-color: #665; }
.tipsy-arrow-w { border-right-color: #665; }



/* DynaTree Overrides */
ul.dynatree-container {
    
    font-family: helvetica, sans-serif;
    font-size: 13px;
    border: none;
    
    .dynatree-title { 
        border-radius: 2px;
        border: 1px solid white;
    }
}
span.dynatree-icon {
    background-image:url("../../../resources/js/lib/dynatree/skin/tree/folder.gif");
    background-position: 0 0 !important;
    background-repeat:no-repeat;
    background-color:transparent;
}
.dynatree-expanded span.dynatree-icon {
    background-image:url("../../../resources/js/lib/dynatree/skin/tree/folder-open.gif");
    background-position: 0 0 !important;
    background-repeat:no-repeat;
    background-color:transparent;
}
.event-tree .dynatree-node:not(.dynatree-has-children) .dynatree-icon {
    background-image:url("../../../resources/js/lib/dynatree/skin/tree/leaf.gif");
}

.dynatree-container .dynatree-title:hover {
    text-decoration: none;
    background-color: #eee;
    border-color: #bbb;
}
.dynatree-node .dynatree-title {
    font-size: 13px;
    line-height: 17px;
    color: @font-color !important;
}
.dynatree-node .dynatree-title:focus {
    background-color: white;
    border-color: #555;
}
.dynatree-node.dynatree-selected .dynatree-title,
.dynatree-node.dynatree-selected .dynatree-title:focus {
    font-style: normal;
    background-color: #eee !important;
    border: 1px solid #bbb;
    color: @font-color;
}

.dynatree-node.dynatree-active:not(.dynatree-selected) .dynatree-title {
    background-color: #fff !important;
    border-color: #fff;
}
.dynatree-node.found .dynatree-title {
    border-color: @primary-color;
}
span.dynatree-folder a {
    font-weight: normal;
}

.dynatree-node.disabled { opacity: .7; }

.inline-tree .tree-canvas {
    background: white;
    border: 1px solid #ccc;
}

.inline-tree .tree-controls { margin-bottom: 3px; }

.tree-controls .tree-search { 
    margin-left: 4px;
    width: 50%;
}

.tree-controls .open-all, 
.tree-controls .close-all {
    float: left;
    overflow: hidden;
    width: 16px;
    height: 1px;
    margin: 5px 4px 0 0;
    padding-top: 15px;
    background-position: left top;
    background-color: transparent;
}

.tree-controls .open-all { background-image: url('../../../resources/js/lib/dynatree/skin/tree/expand.png'); }
.tree-controls .close-all { background-image: url('../../../resources/js/lib/dynatree/skin/tree/collapse.png'); }



/* jQuery UI Overrides */
.ui-autocomplete { z-index: 1000 !important; }
/* ... */

